[package]
name = "mirage-tweaks"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
]

[dependencies.eframe]
version = "0.23"
features = ["glow"]
default-features = false

[dependencies]
rfd = "0.12"
anyhow = "1.0"

[build-dependencies]
winres = "0.1"
