[package]
name = "mirage-tweaks"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = { version = "1.0" }
eframe = { version = "0.23", features = ["glow"], default-features = false }
log = { version = "0.4" }
once_cell = { version = "1.18" }
regex = { version = "1.10" }
rfd = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"] }

[build-dependencies]
winres = { version = "0.1" }
